kubernetes/main/apps/default/nas/netbootxyz/service.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: netboot
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.3
    ports:
      - port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: netboot
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
